--- a/client/user/test/mealorder/menu/meal-order-vendor-menu_test.html
+++ b/client/user/test/mealorder/menu/meal-order-vendor-menu_test.html
@@ -57,21 +57,21 @@
             const DISHES_LENGTH = 5;
             const DISH_COST = 35;
 
-            assert.equal('Пюре', component.menu.vendor);
-            assert.equal(CATEGORIES, component.menu.categories.length);
-            assert.equal('Первое блюдо', component.menu.categories[0].categoryName);
-            assert.equal(DISHES_LENGTH, component.menu.categories[0].dishes.length);
-            assert.equal('Суп гречневый', component.menu.categories[0].dishes[0].title);
-            assert.equal(DISH_COST, component.menu.categories[0].dishes[0].price);
+            assert.equal(component.menu.vendor, 'Пюре');
+            assert.equal(component.menu.categories.length, CATEGORIES);
+            assert.equal(component.menu.categories[0].categoryName, 'Первое блюдо');
+            assert.equal(component.menu.categories[0].dishes.length, DISHES_LENGTH);
+            assert.equal(component.menu.categories[0].dishes[0].title, 'Суп гречневый');
+            assert.equal(component.menu.categories[0].dishes[0].price, DISH_COST);
         });
 
         test('should expand and collapse on click', function () {
             const header = component.shadowRoot.querySelector('.menu-caption');
             const menu = component.shadowRoot.querySelector('#menu');
             header.click();
-            assert.equal('collapsed', menu.className);
+            assert.equal(menu.className, 'collapsed');
             header.click();
-            assert.equal('expanded', menu.className);
+            assert.equal(menu.className, 'expanded');
         });
 
         test('should send `add-dish` event', function (done) {
@@ -85,6 +85,5 @@
         });
     });
 </script>
-
 </body>
 </html>
