Add redux store to the `meal-order-user-history` component

--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -108,7 +108,7 @@
             </template>
         </paper-tabs>
 
-        <meal-order-vendor-menus items="[[menu]]" on-dish-added="addDishToOrder"></meal-order-vendor-menus>
+        <meal-order-vendor-menus menu-for-day="[[menu]]" on-dish-added="addDishToOrder"></meal-order-vendor-menus>
 
     </template>
     <script>
