--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -23,5 +23,6 @@
         GET_ORDERED_ITEMS: 'GET_ORDERED_ITEMS',
         REMOVE_DISH_FROM_ORDER: 'REMOVE_DISH_FROM_ORDER',
         REMOVE_VENDOR_FROM_ORDER: 'REMOVE_VENDOR_FROM_ORDER',
+        GET_CURRENT_HISTORY: 'GET_CURRENT_HISTORY',
     }
 </script>
