--- a/client/user/src/mealorder/menu/meal-order-user-history.html
+++ b/client/user/src/mealorder/menu/meal-order-user-history.html
@@ -17,16 +17,19 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-<script src="../../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../../bower_components/iron-list/iron-list.html">
 <link rel="import" href="../../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../shell/redux-store.html">
+<link rel="import" href="../shell/actions/user-actions.html">
+
 <dom-module id="meal-order-user-history">
     <template>
         <style>
             #history {
                 width: 70%;
                 margin: 3% auto;
+                color: var(--paper-grey-700);
             }
 
             #title-for-mobile {
@@ -36,12 +39,13 @@
             .header {
                 display: flex;
                 justify-content: space-between;
-                background-color: var(--paper-grey-300);
-                height: 40px;
+                background-color: var(--paper-grey-200);
+                height: 50px;
                 align-items: center;
             }
 
             .vendor-title {
+                color: var(--paper-grey-900);
                 font-size: 22px;
                 font-weight: bolder;
                 margin-top: 2%;
@@ -69,7 +73,7 @@
                 display: flex;
                 justify-content: space-between;
                 background-color: #FFFFFF;
-                height: 40px;
+                height: 50px;
                 margin-bottom: 2px;
                 align-items: center;
             }
@@ -109,17 +113,15 @@
         <div id="history">
             <div id="title-for-mobile">История заказов</div>
 
-            <iron-list items="[[cart]]" as="item">
+            <iron-list items="[[currentHistory.order]]" as="item">
                 <template>
                     <div>
                         <div class="vendor-title">[[item.vendor]]</div>
-
                         <div class="header">
                             <div class="history-title">Наименование</div>
-                            <div class="history-price">Цена</div>
+                            <div class="history-price">Цена, ₴</div>
                             <div class="history-quantity">Количество</div>
                         </div>
-
                         <dom-repeat items="[[item.dishes]]" as="dish">
                             <template>
                                 <div class="dishes">
@@ -132,9 +134,9 @@
                     </div>
                 </template>
             </iron-list>
-            <dom-if if="[[totalSum]]">
+            <dom-if if="[[totalPrice]]">
                 <template>
-                    <div class="total-sum">Общая сумма: [[totalSum]] ₴</div>
+                    <div class="total-sum">Общая сумма: [[totalPrice]] ₴</div>
                 </template>
             </dom-if>
         </div>
@@ -146,7 +148,7 @@
          * @customElement
          * @polymer
          */
-        class MealOrderUserHistory extends Polymer.Element {
+        class MealOrderUserHistory extends MealOrderApp.ReduxMixin(Polymer.Element) {
             static get is() {
                 return 'meal-order-user-history';
             }
@@ -154,34 +156,65 @@
             static get properties() {
                 return {
                     /**
+                     * Selected day.
+                     */
+                    selectedDate: {
+                        type: Object,
+                    },
+
+                    /**
                      * An array containing items to be displayed.
                      */
-                    cart: {
-                        type: Array
+                    currentHistory: {
+                        type: Array,
+                        statePath: 'currentHistory'
                     },
+
                     /**
-                     * Total amount of the order.
+                     * Total price of the order.
                      */
-                    totalSum: {
+                    totalPrice: {
                         type: Number,
-                        computed: '_getTotalSum(cart)',
+                        computed: '_getTotalPrice(currentHistory)',
                     }
                 }
             }
 
-            _getTotalSum(cart) {
-                let totalSum = 0;
-                for (let i = 0; i < cart.length; i++) {
-                    const dishes = cart[i].dishes;
-                    let sum = 0;
-                    for (let i = 0; i < dishes.length; i++) {
-                        sum += (dishes[i].price) * dishes[i].quantity;
-                    }
-                    totalSum += sum;
+            static get actions() {
+                return {
+                    getCurrentHistory: date => ({
+                        type: MealOrderApp.UserAction.GET_CURRENT_HISTORY,
+                        date
+                    }),
                 }
-                return totalSum;
+            }
+
+            static get observers() {
+                return [
+                    '_getCurrentHistory(selectedDate)'
+                ];
+            }
+
+            _getCurrentHistory(selectedDate) {
+                this.dispatch('getCurrentHistory', new Date(selectedDate));
+            }
+
+            _getTotalPrice(currentHistory) {
+                if (currentHistory) {
+                    let totalPrice = 0;
+                    for (let i = 0; i < currentHistory.length; i++) {
+                        const dishes = currentHistory[i].dishes;
+                        let sum = 0;
+                        for (let i = 0; i < dishes.length; i++) {
+                            sum += (dishes[i].price) * dishes[i].quantity;
+                        }
+                        totalPrice += sum;
+                    }
+                    return totalPrice;
+                }
             }
         }
+
         window.customElements.define(MealOrderUserHistory.is, MealOrderUserHistory);
     </script>
 </dom-module>
