--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -208,7 +208,7 @@
                     }]
                 }]
             }],
-            currentHistory: [],
+            currentHistory: {},
         };
 
         MealOrderApp.reducer = (state, action) => {
