--- a/client/user/src/mealorder/menu/meal-order-menu-order.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-order.html
@@ -26,7 +26,7 @@
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 
-<link rel="import" href="meal-order-user-history.html">
+<link rel="import" href="../history/meal-order-user-history.html">
 <link rel="import" href="../menu/meal-order-vendor-menus.html">
 <dom-module id="meal-order-menu-order">
     <template>
