Change the server time to a Date type

--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -117,7 +117,7 @@
                          * The current server time for the calendar.
                          */
                         serverTime: {
-                            type: Object,
+                            type: Date,
                         },
 
                         /**
