--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -161,7 +161,7 @@
                      * The current server time for the calendar.
                      */
                     serverTime: {
-                        type: Object,
+                        type: Date,
                         statePath: 'serverTime'
                     }
 
