Remove unnecessary action, refactor CSS and tests

--- a/client/user/test/mealorder/menu/meal-order-vendor-user-cart_test.html
+++ b/client/user/test/mealorder/menu/meal-order-vendor-user-cart_test.html
@@ -24,7 +24,7 @@
     <meta name="viewport"
           content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>meal-order-client test</title>
+    <title>meal-order-user-cart test</title>
 
     <script src="../../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../../bower_components/web-component-tester/browser.js"></script>
@@ -41,7 +41,7 @@
 </test-fixture>
 
 <script>
-    suite('meal-order-client-app', function () {
+    suite('meal-order-user-cart', function () {
         let component;
 
         setup(() => {
