--- a/client/user/src/mealorder/menu/meal-order-user-cart.html
+++ b/client/user/src/mealorder/menu/meal-order-user-cart.html
@@ -20,7 +20,7 @@
 <script src="../../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 <link rel="import" href="../shell/meal-order-app-namespace.html">
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="meal-order-user-order.html">
+<link rel="import" href="./meal-order-user-order.html">
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="../shell/actions/user-actions.html">
 
