--- a/client/user/src/mealorder/history/meal-order-user-history.html
+++ b/client/user/src/mealorder/history/meal-order-user-history.html
@@ -46,11 +46,11 @@
             }
 
             .vendor-title {
-                color: var(--paper-grey-900);
+                color: var(--paper-grey-700);
                 font-size: 22px;
                 font-weight: bolder;
                 margin-top: 2%;
-                margin-bottom: 2px;
+                margin-bottom: 5px;
             }
 
             .history-title {
@@ -85,7 +85,7 @@
                 align-items: center;
                 background-color: #FFFFFF;
                 font-weight: bolder;
-                height: 40px;
+                height: 50px;
                 padding-right: 2%;
             }
 
@@ -96,7 +96,6 @@
 
                 .history-quantity {
                     width: 40%;
-
                 }
 
                 #history {
@@ -196,11 +195,11 @@
                 let totalPrice = 0;
                 for (let i = 0; i < currentHistory.order.length; i++) {
                     const dishes = currentHistory.order[i].dishes;
-                    let sum = 0;
+                    let priceByVendor = 0;
                     for (let i = 0; i < dishes.length; i++) {
-                        sum += (dishes[i].price) * dishes[i].quantity;
+                        priceByVendor += (dishes[i].price) * dishes[i].quantity;
                     }
-                    totalPrice += sum;
+                    totalPrice += priceByVendor;
                 }
                 return totalPrice;
             }
