Create `meal-order-admin-app` component

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -26,10 +26,15 @@
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="node_modules/redux/dist/redux.js"></script>
     <link rel="icon" href="images/favicon-16x16.png" type="image/png">
+    <link rel="import" href="./src/mealorder/shell/app-shell.html">
     <title>MealOrder</title>
     <style>
+        body {
+            font-family: 'Roboto', 'Noto', sans-serif;
+        }
     </style>
 </head>
 <body>
+<app-shell></app-shell>
 </body>
 </html>
