--- a/client/admin/src/mealorder/dialog/meal-order-dialog-container.html
+++ b/client/admin/src/mealorder/dialog/meal-order-dialog-container.html
@@ -24,7 +24,7 @@
     <template>
     </template>
     <script>
-        class MealOrderDialogContainer extends MealOrderApp.ReduxMixin(Polymer.Element) {
+        class MealOrderDialogContainer extends MealOrderAdminApp.ReduxMixin(Polymer.Element) {
             static get is() {
                 return 'meal-order-dialog-container';
             }
