--- a/client/admin/src/mealorder/shell/app-shell.html
+++ b/client/admin/src/mealorder/shell/app-shell.html
@@ -17,7 +17,8 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-<link rel="import" href="./dialog/meal-order-dialog-container.html">
+<link rel="import" href="../dialog/meal-order-dialog-container.html">
+<link rel="import" href="../meal-order-admin-app.html">
 
 <dom-module id="app-shell">
     <template>
