Add dialog for adding and editing vendors

--- a/client/admin/src/mealorder/dialog/meal-order-dialog-container.html
+++ b/client/admin/src/mealorder/dialog/meal-order-dialog-container.html
@@ -19,6 +19,7 @@
   -->
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../shell/redux-store.html">
+<link rel="import" href="./admin-vendor-manage-dialog.html">
 
 <dom-module id="meal-order-dialog-container">
     <template>
