--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -34,6 +34,7 @@
 <link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="./components/meal-order-vendor-list.html">
+<link rel="import" href="./shell/redux-store.html">
 
 <dom-module id="meal-order-admin-app">
     <template>
