--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -19,10 +19,10 @@
   -->
 
 <script>
-    MealOrderAdminApp.ArrayAction = {
+    const ArrayAction = {
         OPEN_VENDOR_MANAGE: 'OPEN_VENDOR_MANAGE',
         CLOSE_VENDOR_MANAGE: 'CLOSE_VENDOR_MANAGE',
+        ADD_VENDOR: 'ADD_VENDOR',
         REMOVE_VENDOR: 'REMOVE_VENDOR',
-        REMOVE_MENU: 'REMOVE_MENU',
     }
 </script>
