Add a dialog to add and edit a vendor

--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -172,7 +172,7 @@
         </app-drawer-layout>
     </template>
 
-    <script>
+    <script> {
         class MealOrderAdminApp extends Polymer.Element {
             static get is() {
                 return 'meal-order-admin-app';
@@ -180,5 +180,6 @@
         }
 
         window.customElements.define(MealOrderAdminApp.is, MealOrderAdminApp);
+    }
     </script>
 </dom-module>
