--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -17,11 +17,10 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-
 <script>
-    const ArrayAction = {
-        OPEN_VENDOR_MANAGE: 'OPEN_VENDOR_MANAGE',
-        CLOSE_VENDOR_MANAGE: 'CLOSE_VENDOR_MANAGE',
+    MealOrderAdminApp.AdminActions = {
+        OPEN_VENDOR_DIALOG: 'OPEN_VENDOR_DIALOG',
+        CLOSE_VENDOR_DIALOG: 'CLOSE_VENDOR_DIALOG',
         ADD_VENDOR: 'ADD_VENDOR',
         REMOVE_VENDOR: 'REMOVE_VENDOR',
     }
