--- a/client/admin/src/mealorder/shell/app-shell.html
+++ b/client/admin/src/mealorder/shell/app-shell.html
@@ -19,6 +19,7 @@
   -->
 <link rel="import" href="../dialog/meal-order-dialog-container.html">
 <link rel="import" href="../meal-order-admin-app.html">
+<link rel="import" href="redux-store.html">
 
 <dom-module id="app-shell">
     <template>
