--- a/client/admin/src/mealorder/dialog/admin-vendor-manage-dialog.html
+++ b/client/admin/src/mealorder/dialog/admin-vendor-manage-dialog.html
@@ -22,6 +22,8 @@
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../../bower_components/gold-phone-input/gold-phone-input.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../shell/meal-order-admin-app-namespace.html">
+<link rel="import" href="../shell/redux-store.html">
 
 <dom-module id="admin-vendor-manage-dialog">
     <template>
@@ -163,11 +165,13 @@
                         </paper-input>
                         <gold-phone-input
                                 country-code="38"
-                                phone-number-pattern="xxx-xx-xx-xxx" value="{{inputData.phone}}" required="true"
+                                phone-number-pattern="xxx-xx-xx-xxx" value="{{inputData.phone}}"
+                                required="true"
                                 error-message="Неверный формат телефона">
                         </gold-phone-input>
                         <div id="time">
-                            <paper-input label="Заказать до" type="time" value="{{inputData.deadline}}"
+                            <paper-input label="Заказать до" type="time"
+                                         value="{{inputData.deadline}}"
                                          required="true">
                                 <div slot="prefix"></div>
                             </paper-input>
@@ -177,12 +181,14 @@
                         <paper-button on-click="_closeDialog">Отмена</paper-button>
                         <dom-if if="[[_isAdd()]]">
                             <template>
-                                <paper-button class="confirm" on-click="_addVendor">Сохранить</paper-button>
+                                <paper-button class="confirm" on-click="_addVendor">Сохранить
+                                </paper-button>
                             </template>
                         </dom-if>
                         <dom-if if="[[_isUpdate()]]">
                             <template>
-                                <paper-button class="confirm" on-click="_updateVendor">Обновить</paper-button>
+                                <paper-button class="confirm" on-click="_updateVendor">Обновить
+                                </paper-button>
                             </template>
                         </dom-if>
                     </div>
@@ -191,105 +197,107 @@
         </paper-dialog>
     </template>
     <script>
-        /**
-         * Dialog for managing vendors.
-         *
-         * Can have one of following modes:
-         * 1. `add` adds new vendor after validation
-         * 2. `update` updates existing vendor after validation
-         *
-         * @customElement
-         * @polymer
-         * @appliesMixin MealOrderApp.ReduxMixin
-         */
-        class AdminVendorManageDialog extends MealOrderAdminApp.ReduxMixin(Polymer.Element) {
-            static get is() {
-                return 'admin-vendor-manage-dialog';
-            }
-
-            static get properties() {
-                return {
-                    /**
-                     * Dialog working mode.
-                     *
-                     * Can be `add` mode or `update`.
-                     * Depending on this it sends different events and renders different elements.
-                     */
-                    mode: {
-                        type: String
-                    },
-
-                    /**
-                     * Values from dialog inputs.
-                     *
-                     * @property {newTitle} vendor name
-                     * @property {newMail} vendor email
-                     * @property {phone} vendor name
-                     * @property {deadline} a time when a user can no more add dishes to their order
-                     */
-                    inputData: {
-                        type: Object,
-                        value: {}
-                    }
+        {
+            /**
+             * Dialog for managing vendors.
+             *
+             * Can have one of following modes:
+             * 1. `add` adds new vendor after validation
+             * 2. `update` updates existing vendor after validation
+             *
+             * @customElement
+             * @polymer
+             * @appliesMixin MealOrderApp.ReduxMixin
+             */
+            class AdminVendorManageDialog extends MealOrderAdminApp.ReduxMixin(Polymer.Element) {
+                static get is() {
+                    return 'admin-vendor-manage-dialog';
                 }
-            };
 
-            static get actions() {
-                return {
-                    closeDialog() {
-                        return {
-                            type: ArrayAction.CLOSE_VENDOR_MANAGE
-                        }
-                    },
-                    addVendor(vendor) {
-                        return {
-                            type: ArrayAction.ADD_VENDOR,
-                            vendor: vendor
+                static get properties() {
+                    return {
+                        /**
+                         * Dialog working mode.
+                         *
+                         * Can be `add` mode or `update`.
+                         * Depending on this it sends different events and renders different elements.
+                         */
+                        mode: {
+                            type: String
+                        },
+
+                        /**
+                         * Values from dialog inputs.
+                         *
+                         * @property {newTitle} vendor name
+                         * @property {newMail} vendor email
+                         * @property {phone} vendor name
+                         * @property {deadline} a time when a user can no more add dishes to their order
+                         */
+                        inputData: {
+                            type: Object,
+                            value: {}
                         }
                     }
+                };
+
+                static get actions() {
+                    return {
+                        closeDialog() {
+                            return {
+                                type: MealOrderAdminApp.AdminActions.CLOSE_VENDOR_DIALOG
+                            }
+                        },
+                        addVendor(vendor) {
+                            return {
+                                type: MealOrderAdminApp.AdminActions.ADD_VENDOR,
+                                vendor: vendor
+                            }
+                        }
+                    }
+                }
+
+                _addVendor() {
+                    if (this.$.form.validate()) {
+                        const vendor = {};
+                        vendor.title = this.inputData.newTitle;
+                        vendor.mail = this.inputData.newMail;
+                        vendor.phone = this.inputData.phone;
+                        vendor.deadline = this.inputData.deadline;
+                        this.dispatch('addVendor', vendor);
+                        this._closeDialog();
+                    }
+                }
+
+                _updateVendor() {
+                    if (this.$.form.validate()) {
+                        const vendor = {};
+                        vendor.title = this.inputData.newTitle;
+                        vendor.mail = this.inputData.newMail;
+                        vendor.phone = this.inputData.phone;
+                        vendor.deadline = this.inputData.deadline;
+                        this.dispatch('updateVendor', vendor);
+                        this._closeDialog();
+                    }
+                }
+
+                _closeDialog() {
+                    this.$.dialog.close();
+                    this.parentNode.removeChild(this);
+                    this.dispatch('closeDialog');
+                }
+
+                _isUpdate() {
+                    return this.mode === 'update';
+                }
+
+                _isAdd() {
+                    return this.mode === 'add';
                 }
             }
 
-            _addVendor() {
-                if (this.$.form.validate()) {
-                    const vendor = {};
-                    vendor.title = this.inputData.newTitle;
-                    vendor.mail = this.inputData.newMail;
-                    vendor.phone = this.inputData.phone;
-                    vendor.deadline = this.inputData.deadline;
-                    this.dispatch('addVendor', vendor);
-                    this._closeDialog();
-                }
-            }
-
-            _updateVendor() {
-                if (this.$.form.validate()) {
-                    const vendor = {};
-                    vendor.title = this.inputData.newTitle;
-                    vendor.mail = this.inputData.newMail;
-                    vendor.phone = this.inputData.phone;
-                    vendor.deadline = this.inputData.deadline;
-                    this.dispatch('updateVendor', vendor);
-                    this._closeDialog();
-                }
-            }
-
-            _closeDialog() {
-                this.$.dialog.close();
-                this.parentNode.removeChild(this);
-                this.dispatch('closeDialog');
-            }
-
-            _isUpdate() {
-                return this.mode === 'update';
-            }
-
-            _isAdd() {
-                return this.mode === 'add';
-            }
+            MealOrderAdminApp.AdminVendorManageDialog = AdminVendorManageDialog;
+            window.customElements.define(AdminVendorManageDialog.is, AdminVendorManageDialog);
         }
-
-        MealOrderAdminApp.AdminVendorManageDialog = AdminVendorManageDialog;
-        window.customElements.define(AdminVendorManageDialog.is, AdminVendorManageDialog);
     </script>
 </dom-module>
