--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -18,10 +18,9 @@
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
 <link rel="import" href="../meal-order-admin-app-namespace.html">
-
 <script>
     {
-        const initialState = {};
+        MealOrderAdminApp.initialState = {};
         MealOrderAdminApp.reducer = (state, action) => {
             if (!state) {
                 return initialState;
@@ -32,5 +31,4 @@
             }
         }
     }
-
 </script>
